// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot (default capability: the gate) 1`] = `
{
  "lines": 655,
  "sha256": "70326a2da1d85e37b8fe342d55d66ddaff2f4527ae0c75300fdaed3cddff84c0",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot new_project (project-free: the shell) 1`] = `
{
  "lines": 655,
  "sha256": "f19c7d262b0e612321736c13f82eaa1a3ac25dd89e62c5120d3c8aae62a6939c",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot rfi (the shell + the job-picker sheet) 1`] = `
{
  "lines": 655,
  "sha256": "49b1c898ddfe3ea50486bfe655460d95e72aac019f7882ffccb8a5e5e48014bb",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) delay-events (log, event, evidence, notice-period, notice-form sheets) 1`] = `
{
  "lines": 690,
  "sha256": "62d5fc68cdbc29f6949df79989ef629271745652658eff1d75110c553f25b17c",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) delay-events: a logged delay, its event sheet and the notice form 1`] = `
{
  "lines": 806,
  "sha256": "a3e9affcca7775ecb4544e2a919be624a285cd4a9828c5aa1e75e96e9524abb0",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) project-detail (the hub with the cost and revision sheets) 1`] = `
{
  "lines": 1544,
  "sha256": "c239fcd7c5f4d6e2816533e1a381070dbd24e83f8b34b408472c54f0a13a4653",
}
`;
